# github-actions-uv

./: .gitignore  .prettierignore  .python-versions  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  requirements.pipx.txt  requirements.uv.tool.txt
.github/actions/pip_freeze/: action.yml
.github/actions/python_install/: action.yml
.github/actions/setup/: action.yml
.github/actions/sync/: action.yml
.github/actions/test__tool/: action.yml
.github/actions/tool_install/: action.yml
.github/actions/uv_python_install/: action.yml
.github/actions/uv_sync/: action.yml
.github/actions/uv_tool_install/: action.yml
.github/workflows/: always.yml  pull_request.yml  test_actions__pip_freeze.yml  test_actions__python_install.yml  test_actions__setup.yml  test_actions__sync.yml  test_actions__tool_install.yml  test_actions__uv_python_install.yml  test_actions__uv_sync.yml  test_actions__uv_tool_install.yml  test_actions__with__pipx.yml  test_actions_with_pipx.yml
assets/pipx/0.6.x/: requirements.pipx.txt
assets/pipx/0.7.x/: requirements.pipx.txt
assets/pipx/0.8.x/: requirements.pipx.txt
assets/uv/0.5.x/: requirements.pipx.txt
assets/uv/azure-foundry-ai-evaluator-py/: pyproject.toml
assets/uv_tool/pyclean/: requirements.uv.tool.txt
assets/uv_tool/pypyr/: requirements.uv.tool.txt
