[project]
name = "github-actions-uv"
version = "1.0.0"
description = "github re-usable actions & workflows for uv"
readme = "README.md"
requires-python = ">=3.13.2,<4.0.0"
dependencies = []


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
